Updates on static-image-export and pandas/colorlover documents

--- a/_posts/python/static-image/static-image-export.ipynb
+++ b/_posts/python/static-image/static-image-export.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "\n",
     "## Save the image:\n",
-    "To save the image, you need to login to plotly using your credentials (username and API Key). More information regarding the same is available [here](https://plot.ly/python/getting-started/)"
+    "To save the image, you need to login to plotly using [your credentials](https://plot.ly/settings/api) (username and API Key)."
    ]
   },
   {
@@ -154,15 +154,24 @@
    "source": [
     "# Supported Formats:\n",
     "\n",
-    "The common image formats: 'PNG', 'JPG/JPEG' are supported.In addition, formats like 'EPS', 'SVG' and 'PDF' are also supported.\n",
+    "The common image formats: 'PNG', 'JPG/JPEG' are supported. In addition, formats like 'EPS', 'SVG' and 'PDF' are also supported.\n",
     "\n",
-    "**Note**: The SVG,EPS and PDF Formats are *only* available for Plotly Professional users. You can get more details on our [pricing page](https://plot.ly/products/cloud/)\n",
+    "**Note**: The SVG, EPS and PDF Formats are *only* available for Plotly Professional users. You can get more details on our [pricing page](https://plot.ly/products/cloud/)\n",
     "\n",
     "\n",
     "To access the image in a particular format, you can either:\n",
-    "   - append the format extension to the plot url. i.e. the JPEG version of the plot: https://plot.ly/~chris/1638 is available at : https://plot.ly/~chris/1638.jpg\n",
+    "   - append the format extension to the plot url. i.e. the JPG version of the plot: https://plot.ly/~chris/1638 is available at : https://plot.ly/~chris/1638.jpg\n",
     "   - Add the appropriate extension to the `save_as` method:\n",
     "     <code> py.image.save_as(fig, 'chris-plot.jpg')</code>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving Image data in Memory:\n",
+    "\n",
+    "The data from the charts can also be stored in the memory. This reduces the overhead of saving the image in the hard disk. It is particularly useful when the image needs to be embedded (for example in email reports)."
    ]
   },
   {
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -207,20 +216,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "//anaconda/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "//anaconda/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
-     ]
     }
    ],
    "source": [
