--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -6,12 +6,23 @@ layout: langindex
 language: r
 ---
 
-<h1 class="centered">Plotly R Library 2.0</h1>
-
-<div>Plotly for R is an interactive, browser-based charting library built on the open source JavaScript graphing library,
-<a href="https://plot.ly/javascript" target="_blank">plotly.js</a>.
-It works entirely locally, through the <a href="http://www.htmlwidgets.org/" target="_blank">HTML widgets</a> framework.
-</div>
+<header class="--welcome">
+	<div class="--welcome-body">
+		<div class="--title">
+			<div class="--category-img">
+                <img src="https://images.plot.ly/language-icons/api-home/r-logo.png" alt="">
+			</div>
+			<div class="--body">
+				<h1>Plotly R Library 2.0</h1>
+				<p>
+                    Plotly for R is an interactive, browser-based charting library built on the open source JavaScript graphing library,
+                    <a href="https://plot.ly/javascript" target="_blank">plotly.js</a>.
+                    It works entirely locally, through the <a href="http://www.htmlwidgets.org/" target="_blank">HTML widgets</a> framework.
+				</p>
+			</div>
+		</div>
+	</div>
+</header>
 
 
 ```r
@@ -26,7 +37,7 @@ plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
 Plotly graphs are interactive. Click-drag to zoom, shift-click to pan, double-click to autoscale.
 
 
-#### Know and love `ggplot2`?
+## Know and love `ggplot2`?
 Try <a href="https://plot.ly/ggplot2/" target="_blank">ggplotly</a>
 
 ```r
@@ -40,7 +51,7 @@ p <- ggplot(data = d, aes(x = carat, y = price)) +
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1145.embed" width="800" frameBorder="0"></iframe>
 
 
-#### Mix data manipulation and visualization verbs
+## Mix data manipulation and visualization verbs
 
 Plotly objects are data frames with a class of plotly and an environment that tracks the mapping from data to visual properties.
 
@@ -74,7 +85,7 @@ p %>%
 
 <iframe height="650" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1147.embed" width="800" frameBorder="0"></iframe>
 
-#### 3D WebGL and more
+## 3D WebGL and more
 
 Although data frames can be thought of as the central object in this package, plotly visualizations don't actually _require_ a data frame. This makes chart types that accept a `z` argument especially easy to use if you have a numeric matrix:
 
@@ -85,7 +96,7 @@ plot_ly(z = volcano, type = "surface")
 
 <iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1149.embed" width="800" frameBorder="0"></iframe>
 
-#### Run locally or publish to the web
+## Run locally or publish to the web
 By default, plotly for R runs locally in your web browser or R Studio's viewer.
 You can publish your graphs to the web by creating a <a href="https://plot.ly/ssu">plotly account</a>.
 
