small colorlover+pandas edit

--- a/_posts/pandas/colorlover/colorlover-with-pandas.ipynb
+++ b/_posts/pandas/colorlover/colorlover-with-pandas.ipynb
@@ -6,20 +6,18 @@
    "source": [
     "## Adding Colorscales to Pandas DataFrames\n",
     "\n",
-    "`Colorlover` is a great library for easily accessing the colorscales. We can use it to conveniently provide the colorscales for Plotly Charts. We will be using [`cufflinks`](https://github.com/santosjorge/cufflinks) library, which binds Plotly directly to pandas dataframes.\n",
+    "`Colorlover` is a great library for easily accessing colorscales. We can use it to conveniently provide the colorscales for Plotly Charts! We will be using the [`cufflinks`](https://github.com/santosjorge/cufflinks) library, which binds Plotly directly to pandas dataframes.\n",
     "\n",
     "To install Cufflinks:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "! pip install cufflinks"
+    "`$ pip install cufflinks`"
    ]
   },
   {
@@ -30,14 +28,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "!pip install colorlover"
+    "`$ pip install colorlover`"
    ]
   },
   {
@@ -73,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, To access all the colorscales with 9 colors:"
+    "For example, to access all the colorscales with 9 colors:"
    ]
   },
   {
@@ -142,13 +138,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/1847.embed\" height=\"587px\" width=\"1116px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11299.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -185,13 +182,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/1857.embed\" height=\"587px\" width=\"1116px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11301.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -210,12 +208,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List of all the colorscales supported by `colorlover` is available <a href=\"http://nbviewer.jupyter.org/gist/jackparmer/4696226c9b6b931bbdf6#All-colors\" target=\"_blank\">Here</a>"
+    "A list of all the colorscales supported by `colorlover` is available <a href=\"http://nbviewer.jupyter.org/gist/jackparmer/4696226c9b6b931bbdf6#All-colors\" target=\"_blank\">here!</a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
