--- a/_posts/user_guide_python/bar_chart_stream.ipynb
+++ b/_posts/user_guide_python/bar_chart_stream.ipynb
@@ -78,15 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Now a Stream object is created w/ the same stream_id as the stream id object associated with our bar chart\n",
+    "#Now a Stream object is created w/ the same stream_id as the stream id object\n",
+    "\n",
     "s = py.Stream(stream_id)\n",
-    "s.open()                   #open a connection to start writing to the plot"
+    "s.open()                  "
    ]
   },
   {
@@ -97,8 +98,8 @@
    },
    "outputs": [],
    "source": [
-    "i = 0    # a counter\n",
-    "N = 2000  # number of points to be plotted\n",
+    "i = 0   \n",
+    "N = 2000 \n",
     "\n",
     "\n",
     "while i<N:               \n",
