updated the example

--- a/_posts/user_guide_python/bar_chart_stream.ipynb
+++ b/_posts/user_guide_python/bar_chart_stream.ipynb
@@ -24,9 +24,9 @@
     " \n",
     "import numpy as np  \n",
     "\n",
-    "stream_id = 'qoy4tt6x9w'   #this is the streaming token associated the account `kevintest`\n",
+    "stream_id = 'jkc6d90yfw'   \n",
     "\n",
-    "# We can generate a new stream ob\n",
+    "# We can generate a new stream id object\n",
     "stream = Stream(\n",
     "    token=stream_id,  \n",
     "    maxpoints=80\n",
@@ -56,24 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'https://plot.ly/~kevintest/236'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "py.plot(fig, filename='bar_stream')      #post this plot up onto the plotly servers"
+    "py.plot(fig, filename='bar-chart-streaming')      #post this plot up onto the plotly servers"
    ]
   },
   {
@@ -98,22 +87,18 @@
    },
    "outputs": [],
    "source": [
-    "i = 0   \n",
-    "N = 2000 \n",
-    "\n",
-    "\n",
-    "while i<N:               \n",
-    "    i += 1  \n",
+    "while True:               \n",
+    "    \n",
     "    s.write(dict(x=['one','two','three','four','five'], y=np.random.random_integers(0,100,5)))  \n",
     "\n",
-    "    time.sleep(1)        #wait one second before plotting again\n",
+    "    time.sleep(0.2)        #wait one second before plotting again\n",
     "    \n",
-    "s.close()                #close the stream"
+    "s.close()                  #close the stream"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -121,19 +106,19 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/236.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~streaming-demos/112.embed\" height=\"525\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tls.embed('https://plot.ly/~kevintest/236/bar-chart-streaming/')"
+    "tls.embed('https://plot.ly/~streaming-demos/112/bar-chart-streaming/')"
    ]
   },
   {
@@ -157,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
