Updated Violin PLot

--- a/_posts/python/violin-plot/violin-plot.ipynb
+++ b/_posts/python/violin-plot/violin-plot.ipynb
@@ -11,10 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Violin plot is a trace that  visually encodes the distribution of a data set, along with its  summary statistics.\n",
+    "Violin plot is a trace that  visually encodes the distribution of a data set, along with its  summary statistics.\n",
     "It displays the graph of the estimated probability density function (pdf) mirrored about y-axis, and inside the violin-like shaped region,  the elements of a box plot (median, lower and upper quartile,   whisker position).\n",
     " \n",
-    "In this Jupyter Notebook we define the functions to get the  Plotly plot of a  violin plot. We  add the option to overlay onto the same axis the rug plot of the data set, in order to get more insights into its distributional properties."
+    "In this Jupyter Notebook we define  functions to get the  Plotly plot of a  violin plot. In order to get more insights into distributional properties we  add the option to overlay onto the same axis the rug plot of the data set."
    ]
   },
   {
@@ -115,14 +115,14 @@
    },
    "outputs": [],
    "source": [
-    "def make_half_violin( x,  y,  fillcolor='#1f77b4', linecolor='rgb(50,50,50)'): \n",
+    "def make_half_violin( x,  y,  fillcolor='#1f77b4',  linecolor='rgb(50,50,50)'): \n",
     "    text=['(pdf(y), y)=('+'{:0.2f}'.format(x[i])+', '+'{:0.2f}'.format(y[i])+')'\n",
     "          for i in range(len(x))] \n",
     "    return Scatter(x=x, \n",
     "                   y=y, mode='lines',\n",
     "                   name='',\n",
     "                   text=text,\n",
-    "                   fill='tozerox',\n",
+    "                   fill='tonextx', \n",
     "                   fillcolor= fillcolor,\n",
     "                   line=Line(width=0.5, color=linecolor, shape='spline'),\n",
     "                   hoverinfo='text',\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -394,13 +394,13 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "py.sign_in('empet', 'my_api_key')\n",
+    "py.sign_in('tarzzz', 'j31379xjqh')\n",
     "py.iplot(fig, filename='Violin-Plot-Example')"
    ]
   },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -470,7 +470,7 @@
        "4     E  0.410634"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -547,13 +547,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "violet_colors=['#604d9e','#6c4774','#9e70a2','#caaac2','#d6c7dd']#violet palette"
+    "violet_colors=['#604d9e','#6c4774','#9e70a2','#caaac2','#d6c7dd']"
    ]
   },
   {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -625,19 +625,19 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "py.sign_in('empet', 'my_api_key')\n",
+    "py.sign_in('tarzzz', 'j31379xjqh')\n",
     "py.iplot(fig, filename='Multiple-Violins')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -647,12 +647,12 @@
     "def  css_styling():\n",
     "    styles = open(\"./custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
-    "css_styling()"
+    "#css_styling()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -680,20 +680,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "//anaconda/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "//anaconda/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -704,11 +690,11 @@
     "\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'Violin-Plot-Plotly.ipynb', 'python/violin-plot', 'Python Violin Plots | plotly',\n",
+    "    'violin-plot.ipynb', 'python/violin-plot/', 'Python Violin Plots | plotly',\n",
     "    'How to make Violun Charts in Python with Plotly.',\n",
-    "    name = 'Your-Tutorial-Chart',\n",
+    "    name = 'Violin Plots',\n",
     "    thumbnail='thumbnail/violin-plot.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='statistical', order=5)\n"
+    "    page_type='example_index', has_thumbnail='true', display_as='statistical', order=5)"
    ]
   }
  ],
