--- a/_posts/python/violin-plot/violin-plot.ipynb
+++ b/_posts/python/violin-plot/violin-plot.ipynb
@@ -400,7 +400,7 @@
     }
    ],
    "source": [
-    "py.sign_in('tarzzz', 'j31379xjqh')\n",
+    "py.sign_in('empet', 'my_api_key')\n",
     "py.iplot(fig, filename='Violin-Plot-Example')"
    ]
   },
@@ -631,7 +631,7 @@
     }
    ],
    "source": [
-    "py.sign_in('tarzzz', 'j31379xjqh')\n",
+    "py.sign_in('empet', 'my_api_key')\n",
     "py.iplot(fig, filename='Multiple-Violins')"
    ]
   },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
