--- a/_posts/user_guide_python/new_py_guide.ipynb
+++ b/_posts/user_guide_python/new_py_guide.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -46,13 +46,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"http://stage.plot.ly/~yankev/172.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/356.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,12 +67,12 @@
     "data=go.Data([trace1])\n",
     "layout=go.Layout(title=\"First Plot\", xaxis={'title':'x1'}, yaxis={'title':'x2'})\n",
     "figure=go.Figure(data=data,layout=layout)\n",
-    "py.iplot(figure)"
+    "py.iplot(figure, filename='pyguide_1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -120,20 +120,20 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"http://stage.plot.ly/~yankev/174.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/358.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "figure.update(dict(layout=dict(title='Plot update'), data=dict(marker=dict(color='blue'))))\n",
-    "py.iplot(figure)"
+    "py.iplot(figure, filename='pyguide_2')"
    ]
   },
   {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +228,7 @@
        "  'y': [4, 5, 6]}]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +263,7 @@
        " 'y': [4, 5, 6]}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +298,7 @@
        "        0.84672005])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +338,7 @@
        "          0.84672005])}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -359,19 +359,19 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"http://stage.plot.ly/~yankev/176.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/360.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plot2 = py.iplot(go.Figure(data=data, layout=layout))\n",
+    "plot2 = py.iplot(go.Figure(data=data, layout=layout), filename='pyguide_3')\n",
     "plot2"
    ]
   },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +402,7 @@
        "{'title': 'First Plot', 'xaxis': {'title': 'x1'}, 'yaxis': {'title': 'x2'}}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -430,20 +430,20 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"http://stage.plot.ly/~yankev/178.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/362.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "layout.update(dict(annotations=[go.Annotation(text=\"Highest Point\", x=3, y=6)]))\n",
-    "py.iplot(go.Figure(data=data, layout=layout))"
+    "py.iplot(go.Figure(data=data, layout=layout), filename='pyguide_4')"
    ]
   },
   {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -498,7 +498,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -1116,7 +1116,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-105-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 375\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__setitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_raise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    376\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    377\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value, _raise)\u001b[0m\n\u001b[1;32m    424\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m                     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPlotlyDictKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m                 \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m: 'markers' is not allowed in 'scatter'\n\nPath To Error: ['markers']\n\nValid attributes for 'scatter' at path [] under parents []:\n\n    ['textposition', 'uid', 'stream', 'ysrc', 'hoverinfo', 'xsrc',\n    'visible', 'marker', 'y0', 'tsrc', 'line', 'fill', 'showlegend',\n    'error_x', 'error_y', 'rsrc', 'xaxis', 'text', 'type', 't', 'opacity',\n    'textfont', 'legendgroup', 'textpositionsrc', 'textsrc', 'dx', 'dy',\n    'x0', 'name', 'yaxis', 'connectgaps', 'r', 'mode', 'y', 'x',\n    'fillcolor']\n\nRun `<scatter-object>.help('attribute')` on any of the above.\n'<scatter-object>' is the object at []"
@@ -1176,7 +1176,7 @@
    "outputs": [],
    "source": [
     "figure = go.Figure(data=[scatter_trace], layout=layout)\n",
-    "py.iplot(figure)"
+    "py.iplot(figure, filename='pyguide_5')"
    ]
   },
   {
@@ -1190,7 +1190,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
