--- a/_posts/python/range-slider/range-slider.ipynb
+++ b/_posts/python/range-slider/range-slider.ipynb
@@ -210,7 +210,7 @@
     "    'range-slider.ipynb', 'python/range-slider', 'Python Range Slider and Selectors | plotly',\n",
     "    'Create graphs with range sliders and range selectors in Python with Plotly.',\n",
     "    name = 'Range Slider and Selector',\n",
-    "    thumbnail='/images/range.png', language='python',\n",
+    "    thumbnail='/images/sliders.png', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=4)"
    ]
   },
