--- a/_posts/python/range-slider/range-slider.ipynb
+++ b/_posts/python/range-slider/range-slider.ipynb
@@ -182,9 +182,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\n",
-      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\r\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
      ]
     },
     {
@@ -207,7 +207,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'range-slider.ipynb', 'python/range-slider', 'Python Range Slider and Selectors | plotly',\n",
+    "    'range-slider.ipynb', 'python/range-slider/', 'Python Range Slider and Selectors | plotly',\n",
     "    'Create graphs with range sliders and range selectors in Python with Plotly.',\n",
     "    name = 'Range Slider and Selector',\n",
     "    thumbnail='/images/sliders.png', language='python',\n",
