range-slider img

--- a/_posts/python/range-slider/range-slider.ipynb
+++ b/_posts/python/range-slider/range-slider.ipynb
@@ -66,11 +66,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/pandas/io/data.py:35: FutureWarning:\n",
+      "\n",
+      "\n",
+      "The pandas.io.data module is moved to a separate package (pandas-datareader) and will be removed from pandas in a future version.\n",
+      "After installing the pandas-datareader package (https://github.com/pydata/pandas-datareader), you can change the import ``from pandas.io import data, wb`` to ``from pandas_datareader import data, wb``.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "import pandas.io.data as web\n",
@@ -89,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -97,13 +110,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11483.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11495.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -186,16 +199,6 @@
       "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\r\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
-     ]
     }
    ],
    "source": [
@@ -210,18 +213,9 @@
     "    'range-slider.ipynb', 'python/range-slider/', 'Python Range Slider and Selectors | plotly',\n",
     "    'Create graphs with range sliders and range selectors in Python with Plotly.',\n",
     "    name = 'Range Slider and Selector',\n",
-    "    thumbnail='/images/sliders.png', language='python',\n",
+    "    thumbnail='thumbnail/sliders.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
